--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 .vscode
 output
 build
+**/build/
+**/__pycache__/
+*.egg-info/
+*.so
 diff_rasterization/diff_rast.egg-info
 diff_rasterization/dist
 tensorboard_3d
